syntax = "proto3";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Tags";

package grpc_server.api.protos.messages.tags;

message TagCreateDto {
    string name = 1;
}
