syntax = "proto3";

option csharp_namespace = "GrpcServer.Api.Protos.Messages.Tags";

package grpc_server.api.protos.messages.tags;

message TagUpdateDto {
    string id = 1;
    string name = 2;
}
